[project]
name = "geotessera"
version = "0.7.3"
description = "Python library interface to the Tessera geofoundation model embeddings"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "geopandas",
    "pandas",
    "matplotlib",
    "rasterio",
    "sphinx>=8.2.3",
    "rich",
    "typer",
    "geodatasets>=2024.8.0",
    "scikit-learn>=1.7.1",
    "scikit-image>=0.25.2",
    "pyarrow>=17.0.0",
    "cram>=0.7",
    "xarray",
    "rioxarray",
    "zarr",
    "dask"
]

[project.urls]
Homepage = "https://github.com/ucam-eo/geotessera"
Documentation = "https://geotessera.readthedocs.io"
Repository = "https://github.com/ucam-eo/geotessera"
Issues = "https://github.com/ucam-eo/geotessera/issues"
Changelog = "https://github.com/ucam-eo/geotessera/blob/main/CHANGES.md"

[project.scripts]
geotessera = "geotessera.cli:main"
geotessera-registry = "geotessera.registry_cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geotessera*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
